--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
         <vaadin.spring.boot.version>1.2.0</vaadin.spring.boot.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+    </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
